Removed link to Wikipedia
Removed link to Wikipedia article on Brown Bear from the first picture.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li>United States</li>
       <li>Canada</li>
     </ol>
-    <a href="https://en.wikipedia.org/wiki/Brown_Bear"<img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" alt="A Brown Bear"/> > </a>
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" alt="A Brown Bear"/>
     <h5>Image by Codecademy</h5>
   </body> 
 </html>
