--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
   <title>Animals Around the World</title>
+ <link href="nav.css" type="text/stylesheet">
 </head>
   <body>
+	<div class="nav">
+		<ul><li><a href="index.html">Brown Bear</a></li><li><a href="goldfish.html">Goldfish</a></li></ul>
+	</div>
     <h1>The Brown Bear</h1>
     <p>The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently "Least Concern." There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.</p>
     <a href="https://en.wikipedia.org/wiki/Brown_Bear" target= "_blank">Learn More</a>
